@@ -38,7 +38,7 @@ public void testCase1() {
   symbolTable.deleteMin();
   Assert.assertEquals(true, symbolTable.contains("C"));
   // String[] arr = {"C","E","H","L","M","P","R","S","X"};
-  List<String> arr = new ArrayList<String>(List.of("C","E","H","L","M","P","R","S","X"));
+  List<String> arr = new ArrayList<String>(Arrays.asList("C","E","H","L","M","P","R","S","X"));
   String res = "";
   for(String s: arr){
   	res += s + " ";
@@ -66,7 +66,7 @@ public void testCase2() {
   symbolTable.deleteMin();
   symbolTable.deleteMin();
   Assert.assertEquals("Y", symbolTable.max());
-  List<String> arr = new ArrayList<String>(List.of("O","Q","S","T","U","Y"));
+  List<String> arr = new ArrayList<String>(Arrays.asList("O","Q","S","T","U","Y"));
   String res = "";
   for(String s: arr){
   	res += s + " ";
@@ -94,7 +94,7 @@ public void testCase3() {
   symbolTable.put("E",10);
   Assert.assertEquals("X", symbolTable.max());
   symbolTable.deleteMin();
-  List<String> arr = new ArrayList<String>(List.of("E","L","M","O","P","R", "S", "T", "X"));
+  List<String> arr = new ArrayList<String>(Arrays.asList("E","L","M","O","P","R", "S", "T", "X"));
   String res = "";
   for(String s: arr){
   	res += s + " ";
